upgrade-spring-boot-to-4-and-java-to-25